October 27, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfinput/xkb.c: Use XkbSetDetectableAutoRepeat() instead of
   disabling autorepeat globally.
 * po/zh_CN.po: Updated.
 * plugins/peopsxgl/gpu.c: Allow clicking close button to return to the main
   UI instead of bailing out.

October 26, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfinput/cfg.c: Fixed a bug which caused the settings for analog
   pad not correctly read from the config file.

October 25, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfinput/cfg.c: Replaced dfinput with new SDL/Xkb-based input plugin.
 * plugins/dfinput/analog.c: Likewise.
 * plugins/dfinput/Makefile.in: Likewise.
 * plugins/dfinput/cfg-gtk2.c: Likewise.
 * plugins/dfinput/pad.c: Likewise.
 * plugins/dfinput/sdljoy.c: Likewise.
 * plugins/dfinput/xkb.c: Likewise.
 * plugins/dfinput/dfinput.glade2: Likewise.
 * plugins/dfinput/Makefile.am: Likewise.
 * plugins/dfinput/pad.h: Likewise.
 * plugins/dfinput/padjoy.h: Removed.
 * configure.ac: Check for SDL on configure.
 * debian/control: Added libsdl1.2-dev to Build-Depends.
 * po/pt_BR.po, po/zh_TW.po, po/zh_CN.po, po/pcsx.pot: Updated.

October 24, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * macosx/Pcsx.xcodeproj/project.pbxproj: Fixed Mac OS X build.
 * macosx/plugins: Added CDR and PAD plugins for Mac OS X..

October 9, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * gui/hdebug.c: Removed PCSX-df debugger, which is incompleted and buggy.
 * gui/hdebug.h: Likewise.
 * gui/Makefile.am: Likewise.
 * libpcsxcore/debug.c: Added telnet-based debugger from PCSX CVS. GUI-based
   debugger should be worked on for better usability.
 * libpcsxcore/debug.h: Likewise.
 * libpcsxcore/socket.c: Likewise.
 * libpcsxcore/socket.h: Likewise.
 * libpcsxcore/psxinterpreter.c: Likewise.
 * libpcsxcore/psxmem.c: Likewise.
 * libpcsxcore/r3000a.c: Likewise.
 * libpcsxcore/r3000a.h: Likewise.
 * libpcsxcore/psxcommon.h: Likewise.
 * libpcsxcore/psxcounters.c: Likewise.